research: Gas Town multi-agent orchestrator analysis + competitive landscape update
why: Steve Yegge's Gas Town (Kubernetes for coding agents) is the most relevant multi-agent architecture for pi's future. Architecture maps directly to our task system + vault.
step: analyzed Gas Town concepts (Mayor, Rigs, Polecats, Hooks, Beads, Convoys), created comparison table with pi equivalents and gaps.
next: explore completely new territory — something not research or infrastructure

--- a/lamarck/vault/Daily/2026-02-18.md
+++ b/lamarck/vault/Daily/2026-02-18.md
@@ -37,5 +37,8 @@ See `vault/Notes/coding-agent-landscape-feb-2026.md`.
 
 **URGENT**: The window for understand tool launch is still open. Updated discourse note with #10-11.
 
+### Gas Town Analysis (Steve Yegge)
+Multi-agent orchestrator for Claude Code. "Kubernetes for coding agents." Key insight: agents are ephemeral sessions with persistent identity + git-backed work state. Same philosophy as our vault approach. Coordinates 20-30 agents. Architecture maps closely to our task system. Key gaps vs Gas Town: no persistent agent identity, no inter-agent mailboxes, no work bundling (convoys). See landscape note for comparison table.
+
 ### Pinned Context Design
 Analyzed compaction pipeline (825 lines). Extensions can fully intercept via `session_before_compact` and provide custom `CompactionResult`. Designed 4 options for preserving critical context across compaction. Option A (extension-only, no core changes) is most promising. See `vault/Notes/pinned-context-design.md`. Not implementing yet — file-based persistence (briefing) already works.
