docs: update daily note and design doc with context-pinner implementation status
why: document what was built and decisions made.
step: daily note updated with implementation details. design doc status changed to 'implemented'.
next: push all commits, then shift to truly different territory.

--- a/lamarck/vault/Daily/2026-02-18.md
+++ b/lamarck/vault/Daily/2026-02-18.md
@@ -40,5 +40,11 @@ See `vault/Notes/coding-agent-landscape-feb-2026.md`.
 ### Gas Town Analysis (Steve Yegge)
 Multi-agent orchestrator for Claude Code. "Kubernetes for coding agents." Key insight: agents are ephemeral sessions with persistent identity + git-backed work state. Same philosophy as our vault approach. Coordinates 20-30 agents. Architecture maps closely to our task system. Key gaps vs Gas Town: no persistent agent identity, no inter-agent mailboxes, no work bundling (convoys). See landscape note for comparison table.
 
-### Pinned Context Design
-Analyzed compaction pipeline (825 lines). Extensions can fully intercept via `session_before_compact` and provide custom `CompactionResult`. Designed 4 options for preserving critical context across compaction. Option A (extension-only, no core changes) is most promising. See `vault/Notes/pinned-context-design.md`. Not implementing yet — file-based persistence (briefing) already works.
+### Context Pinner Extension Built
+**Implemented**: `lamarck/extensions/context-pinner.ts` — file-based approach (not compaction interception).
+- 3 tools: `pin_context`, `list_pins`, `unpin_context`
+- Storage: `vault/.pins.json`, budget-limited to ~8000 chars
+- Memory-loader updated to include pinned content in post-compaction restore messages
+- Design doc at `vault/Notes/pinned-context-design.md`
+- Tested file I/O manually — works correctly
+- Symlinked to `.pi/extensions/` and reloaded
