docs: record smoke test fix in implementation note and daily log
why: critical bug fix needs documentation — the entire evolution infra was non-functional.
step: updated implementation status checklist. added daily note entry about the fix.
next: push, explore new territory.

--- a/lamarck/vault/Daily/2026-02-18.md
+++ b/lamarck/vault/Daily/2026-02-18.md
@@ -48,3 +48,6 @@ Multi-agent orchestrator for Claude Code. "Kubernetes for coding agents." Key in
 - Design doc at `vault/Notes/pinned-context-design.md`
 - Tested file I/O manually — works correctly
 - Symlinked to `.pi/extensions/` and reloaded
+
+### Critical Bug Fix: Supervisor & Smoke Test Entry Point
+**Both supervisor and smoke test were completely non-functional** — they used `dist/main.js` (which only exports the `main()` function) instead of `dist/cli.js` (which actually calls `main()`). Result: zero output, silent exit 0. Fixed both scripts. Smoke test now passes: "PASS: pi responded (804 chars)". This validates that testing infrastructure is essential — we built the entire evolution system and never ran the smoke test until now.
